// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletVote > multi vote networks > should render a vote for multiple active and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            Active 1
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Resigned 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > multi vote networks > should render a vote for multiple active and standby delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            Active 1
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Standby 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > multi vote networks > should render a vote for multiple active, standby and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            3
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            Active 1
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Standby 1
            </span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               & Resigned 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > multi vote networks > should render a vote for multiple standby and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold"
          >
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Standby 1
            </span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
               / Resigned 1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > multi vote networks > should render votes when all delegates are active 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="font-semibold text-theme-primary-600"
          >
            All Active
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > multi vote networks > should render votes when all delegates are on standby 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Votes
          </span>
          <span>
            2
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              /101
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-warning-500"
          >
            All Standby
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should disable vote button when balance is less than votesAmountStep 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Validator yet.
          </span>
          <a
            class="ring-focus group/inner inline-block css-167zzsv"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-bxx244"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
              data-testid="Link__external"
              height="12"
              width="12"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
      <div
        class="ml-4 flex"
      >
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Locked Votes
          </span>
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Locked Unvotes
          </span>
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Validator yet.
          </span>
          <a
            class="ring-focus group/inner inline-block css-167zzsv"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-bxx244"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
              data-testid="Link__external"
              height="12"
              width="12"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render as all resigned 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span
            class="cursor-pointer text-theme-primary-600 transition-colors duration-200 hover:text-theme-primary-700 active:text-theme-primary-500"
          >
            Multivote
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            N/A
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-danger-400"
          >
            All Resigned
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render disabled vote button 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Validator yet.
          </span>
          <a
            class="ring-focus group/inner inline-block css-167zzsv"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-bxx244"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
              data-testid="Link__external"
              height="12"
              width="12"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render ledger for incompatible ledger wallet 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Validator yet.
          </span>
          <a
            class="ring-focus group/inner inline-block css-167zzsv"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-bxx244"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
              data-testid="Link__external"
              height="12"
              width="12"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render skelethon if loading 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col rounded-xl border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-black md:border-0 md:bg-transparent md:dark:bg-transparent"
    data-testid="WalletVote__skeleton"
  >
    <div
      class="flex w-full items-center px-6 py-4 md:p-0"
    >
      <div
        class="mr-4 hidden md:block"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 44px; height: 44px; border-radius: 50%;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="flex h-10 flex-col justify-between"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="ml-auto"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 44px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
    <div
      class="flex justify-center border-t border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800 md:hidden"
    >
      <div
        class="flex h-10 flex-col items-center justify-between"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Votes
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/101
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Validator yet.
          </span>
          <a
            class="ring-focus group/inner inline-block css-167zzsv"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-bxx244"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
              data-testid="Link__external"
              height="12"
              width="12"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render without votes 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col justify-between space-y-2 text-center md:space-y-0 md:text-left"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="flex flex-col space-y-2 leading-none md:flex-row md:space-y-0"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Validator yet.
          </span>
          <a
            class="ring-focus group/inner inline-block css-167zzsv"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://arkvault.io/docs/transactions/vote"
            rel="noopener noreferrer"
          >
            <span
              class="css-bxx244"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-1fio4bh"
              data-testid="Link__external"
              height="12"
              width="12"
            >
              <svg
                id="arrow-external"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a delegate without rank 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span>
            arkx
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            N/A
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-warning-500"
          >
            Standby
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a standby delegate 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span>
            arkx
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            #52
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="flex h-5 w-5 items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 transition-colors hover:bg-theme-primary-600 hover:text-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="hint-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <circle
                  cx="4.5"
                  cy="1"
                  fill="currentColor"
                  r="1"
                />
              </svg>
            </div>
          </span>
          <span
            class="font-semibold text-theme-warning-500"
          >
            Standby
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for an active delegate 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-start"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-grow flex-col overflow-hidden rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800 md:w-auto md:flex-row md:rounded-none md:border-0"
    >
      <div
        class="hidden md:block"
      >
        <div
          class="border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background duration-100 css-1nqcsx"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-4 dark:border-theme-secondary-800 dark:bg-black md:ml-4 md:border-none md:bg-transparent md:p-0"
      >
        <div
          class="flex flex-grow flex-col justify-between font-semibold md:flex-grow-0"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Voting for
          </span>
          <span>
            arkx
          </span>
        </div>
        <div
          class="ml-6 flex flex-col justify-between border-l border-theme-secondary-300 pl-6 font-semibold dark:border-theme-secondary-800"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Rank
          </span>
          <span>
            #10
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between border-theme-secondary-300 px-6 py-4 font-semibold dark:border-theme-secondary-800 md:mr-6 md:items-end md:border-r md:py-0 md:pl-0 md:pr-6"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Validator Status
        </span>
        <div
          class="flex items-center justify-end space-x-2"
        >
          <span
            class="font-semibold text-theme-primary-600"
          >
            Active
          </span>
        </div>
      </div>
    </div>
    <div
      class="w-full sm:w-auto sm:max-md:self-end"
    >
      <button
        class="px-5 py-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 mt-4 w-full space-x-2 md:mt-0 md:w-auto"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="vote"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                />
                <path
                  d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                />
              </g>
            </svg>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
